[gd_scene load_steps=4 format=3 uid="uid://d2h30qrbkdpsf"]

[ext_resource type="PackedScene" uid="uid://bugcix34kjk5f" path="res://map/map.tscn" id="1_t2f4w"]
[ext_resource type="Script" path="res://game.gd" id="1_yyo17"]
[ext_resource type="PackedScene" uid="uid://nqkyn3as8wpk" path="res://ball/ball.tscn" id="4_jiwkx"]

[node name="Game" type="Node2D"]
script = ExtResource("1_yyo17")

[node name="Map" parent="." instance=ExtResource("1_t2f4w")]
position = Vector2(1466, -785)
rotation = 1.5708
scale = Vector2(2, 2)

[node name="Ball" parent="." instance=ExtResource("4_jiwkx")]
position = Vector2(639, 361)

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(720, 1191)
gizmo_extents = 192.1

[node name="Timer" type="Timer" parent="."]

[node name="TeamOne" type="Node2D" parent="."]

[node name="Spawn" type="Marker2D" parent="TeamOne"]
position = Vector2(713, 824)
gizmo_extents = 143.2

[node name="TeamTwo" type="Node2D" parent="."]

[node name="Spawn" type="Marker2D" parent="TeamTwo"]
position = Vector2(687, 95)
gizmo_extents = 143.2

[connection signal="timeout" from="Timer" to="." method="_run_per_second"]
